<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ramstalk.co.jp.project.activity.Fragment.FooterFragment"
    android:id="@+id/footer">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:drawable/bottom_bar">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/footer_timeline"
            android:text="@string/footer_timeline"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/footer_map"
            android:text="@string/footer_map"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/footer_making_a_posting"
            android:text="@string/footer_making_a_posting"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/footer_notification"
            android:text="@string/footer_notification"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/footer_home"
            android:text="@string/footer_home"
            android:layout_weight="1" />
    </LinearLayout>

</FrameLayout>
